# vyatta-vrf

./: .gitignore  Makefile.am  README  README.md  configure.ac  install.sh
debian/: changelog  control  lintian  rules
sbin/: xvyatta-link-detect  xvyatta-multi-vtysh.pl  xvyatta-quagga-config-gen.pl
vyatta-cfg/templates/interfaces/veth-pair/: node.def
vyatta-cfg/templates/interfaces/veth-pair/node.tag/veth/: node.def
vyatta-cfg/templates/interfaces/vethernet/: node.def
vyatta-cfg/templates/vrf/: node.def
vyatta-cfg/templates/vrf/node.tag/interfaces/ethernet/: node.def
vyatta-cfg/templates/vrf/node.tag/interfaces/vethernet/: node.def
vyatta-cfg/templates/vrf/node.tag/interfaces/vethernet/node.tag/redirect/: node.def
vyatta-cfg/templates/vrf/node.tag/protocols/ospf/: node.def
vyatta-cfg/templates/vrf/node.tag/protocols/ospf/auto-cost/reference-bandwidth/: node.def
vyatta-cfg/templates/vrf/node.tag/protocols/ospf/default-information/originate/: node.def
vyatta-cfg/templates/vrf/node.tag/protocols/ospf/default-metric/: node.def
vyatta-cfg/templates/vrf/node.tag/protocols/ospf/log-adjacency-changes/: node.def
vyatta-cfg/templates/vrf/node.tag/protocols/ospf/neighbor/: node.def
vyatta-cfg/templates/vrf/node.tag/protocols/ospf/passive-interface/: node.def
vyatta-cfg/templates/vrf/node.tag/protocols/ospf/passive-interface-exclude/: node.def
vyatta-cfg/templates/vrf/node.tag/protocols/ospfv3/: node.def
vyatta-op/templates/show/vrf/node.tag/ip/forwarding/: node.def
vyatta-op/templates/show/vrf/node.tag/ip/groups/: node.def
(+97 files in other folders)
